[package]
name = "unbuffered_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.20.3"
clap = "3.0.0-beta.4"
windows-drives = "0.5.0"
powershell_script = "1.0.2"
winapi = "0.3.9"

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]
